[gd_scene load_steps=13 format=3 uid="uid://bpuff0deqd4sc"]

[ext_resource type="Script" path="res://scripts/title_screen.gd" id="1_4r2ni"]
[ext_resource type="PackedScene" uid="uid://cwhlid74b0gjj" path="res://scenes/background/parallax_background.tscn" id="2_lpgfs"]
[ext_resource type="Theme" uid="uid://dumay4sqx8cg2" path="res://assets/Textures/playbutton.tres" id="3_omrqy"]
[ext_resource type="Theme" uid="uid://bcq2epb4bba1a" path="res://assets/Textures/optButton1.tres" id="5_hw2g5"]
[ext_resource type="Texture2D" uid="uid://b80egerwe72rv" path="res://assets/Title Screen/Roret_Cursor/png/hand_cursor0000.png" id="6_fkehs"]
[ext_resource type="FontFile" uid="uid://cjwneuq26cyu6" path="res://assets/Fonts/Shape Bit.otf" id="9_eyui7"]

[sub_resource type="Animation" id="Animation_vc0p4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HandCursor0001:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(503.218, 688)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HandCursor0000:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(184, 688)]
}

[sub_resource type="Animation" id="Animation_3jl8n"]
resource_name = "left_hand_move"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HandCursor0001:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(503.218, 688), Vector2(480, 688)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HandCursor0000:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(184, 688), Vector2(216, 688)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tdrxb"]
_data = {
"RESET": SubResource("Animation_vc0p4"),
"left_hand_move": SubResource("Animation_3jl8n")
}

[sub_resource type="Animation" id="Animation_5lfsw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HandCursor0002:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(184, 864)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HandCursor0003:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(520, 864)]
}

[sub_resource type="Animation" id="Animation_fe4s5"]
resource_name = "left_hand_move_2"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HandCursor0002:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(184, 864), Vector2(216, 864)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HandCursor0003:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(504, 864), Vector2(480, 864)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_83dbt"]
_data = {
"RESET": SubResource("Animation_5lfsw"),
"left_hand_move_2": SubResource("Animation_fe4s5")
}

[node name="title_Screen" type="Control"]
layout_mode = 3
anchor_right = 1.039
anchor_bottom = 1.046
offset_right = -42.928
offset_bottom = -33.808
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4r2ni")

[node name="ParallaxBackground" parent="." instance=ExtResource("2_lpgfs")]

[node name="btnPlay" type="Button" parent="."]
layout_mode = 0
offset_left = 235.0
offset_top = 629.0
offset_right = 243.0
offset_bottom = 637.0
scale = Vector2(28.2861, 14.8341)
theme = ExtResource("3_omrqy")

[node name="btnOption" type="Button" parent="."]
layout_mode = 0
offset_left = 235.0
offset_top = 792.0
offset_right = 243.0
offset_bottom = 800.0
scale = Vector2(28.2861, 14.8341)
theme = ExtResource("5_hw2g5")

[node name="Play_Button_Cursor" type="AnimatedSprite2D" parent="."]

[node name="HandCursor0000" type="Sprite2D" parent="Play_Button_Cursor"]
position = Vector2(184, 688)
scale = Vector2(1.5, 1.5)
texture = ExtResource("6_fkehs")

[node name="HandCursor0001" type="Sprite2D" parent="Play_Button_Cursor"]
position = Vector2(503.218, 688)
scale = Vector2(1.5, 1.5)
texture = ExtResource("6_fkehs")
flip_h = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Play_Button_Cursor"]
libraries = {
"": SubResource("AnimationLibrary_tdrxb")
}
autoplay = "left_hand_move"

[node name="Option_Button_Cursor" type="AnimatedSprite2D" parent="."]

[node name="HandCursor0002" type="Sprite2D" parent="Option_Button_Cursor"]
position = Vector2(184, 864)
scale = Vector2(1.5, 1.5)
texture = ExtResource("6_fkehs")

[node name="HandCursor0003" type="Sprite2D" parent="Option_Button_Cursor"]
position = Vector2(520, 864)
scale = Vector2(1.5, 1.5)
texture = ExtResource("6_fkehs")
flip_h = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Option_Button_Cursor"]
libraries = {
"": SubResource("AnimationLibrary_83dbt")
}
autoplay = "left_hand_move_2"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 120.0
offset_top = 112.0
offset_right = 300.0
offset_bottom = 312.0
scale = Vector2(2.62412, 2.47247)
theme_override_fonts/normal_font = ExtResource("9_eyui7")
theme_override_font_sizes/normal_font_size = 60
bbcode_enabled = true
text = "[center][shake]Tap [/shake]
[rainbow]Mart"
autowrap_mode = 0
tab_size = 0

[node name="main" type="ColorRect" parent="."]
layout_mode = 0
offset_top = 1280.0
offset_right = 720.0
offset_bottom = 2560.0

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 37.0
offset_top = 400.0
offset_right = 283.0
offset_bottom = 430.0
scale = Vector2(2.62412, 2.47247)
theme_override_colors/default_color = Color(1, 0.786101, 0.458403, 1)
theme_override_fonts/normal_font = ExtResource("9_eyui7")
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "Enter your Name:"
autowrap_mode = 0
tab_size = 0

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 112.0
offset_top = 474.0
offset_right = 612.0
offset_bottom = 574.0
theme_override_font_sizes/font_size = 50
alignment = 1

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 143.0
offset_top = 581.0
offset_right = 588.0
offset_bottom = 604.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("9_eyui7")
text = "Please enter your name first in order to proceed."
horizontal_alignment = 1

[connection signal="button_down" from="btnPlay" to="." method="_on_button_button_down"]
[connection signal="button_up" from="btnPlay" to="." method="_on_button_button_up"]
[connection signal="mouse_entered" from="btnPlay" to="." method="_on_btn_play_mouse_entered"]
[connection signal="mouse_exited" from="btnPlay" to="." method="_on_btn_play_mouse_exited"]
[connection signal="pressed" from="btnPlay" to="." method="_on_btn_play_pressed"]
[connection signal="button_down" from="btnOption" to="." method="_on_button_button_down"]
[connection signal="button_up" from="btnOption" to="." method="_on_button_button_up"]
[connection signal="mouse_entered" from="btnOption" to="." method="_on_btn_option_mouse_entered"]
[connection signal="mouse_exited" from="btnOption" to="." method="_on_btn_option_mouse_exited"]
[connection signal="pressed" from="btnOption" to="." method="_on_btn_option_pressed"]
